2013-10-17  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/58143
	* tree-ssa-loop-im.c (arith_code_with_undefined_signed_overflow):
	New function.
	(rewrite_to_defined_overflow): Likewise.
	(move_computations_dom_walker::before_dom): Rewrite stmts
	with undefined signed overflow that are not always executed
	into unsigned arithmetic.

2013-10-16  Michael Meissner  <meissner@linux.vnet.ibm.com>

	PR target/57756
	* config/rs6000/rs6000.opt (rs6000_isa_flags_explicit): Move the
	explicit isa flag to be an options variable, instead of using
	global_options_set.  Remove define from rs6000.h.
	* config/rs6000/rs6000.h (rs6000_isa_flags_explicit): Likewise.

	* config/rs6000/rs6000.c (rs6000_option_override_internal):
	Initialize rs6000_isa_flags_explicit.
	(rs6000_function_specific_save): Add gcc_options* parameter, so
	that the powerpc builds after the 2013-10-15 changes.
	(rs6000_function_specific_restore): Likewise.

2013-10-16  DJ Delorie  <dj@redhat.com>

	* config/rl78/rl78.c (rl78_alloc_address_registers_macax): Verify
	op is a REG before checking REGNO.
	(rl78_alloc_physical_registers): Verify pattern is a SET before
	checking SET_SRC.

2013-10-16  Bill Schmidt  <wschmidt@linux.vnet.ibm.com>

	* gcc/config/rs6000/vector.md (vec_unpacks_hi_v4sf): Correct for
	endianness.
	(vec_unpacks_lo_v4sf): Likewise.
	(vec_unpacks_float_hi_v4si): Likewise.
	(vec_unpacks_float_lo_v4si): Likewise.
	(vec_unpacku_float_hi_v4si): Likewise.
	(vec_unpacku_float_lo_v4si): Likewise.

2013-10-16  Bill Schmidt  <wschmidt@linux.vnet.ibm.com>

	* config/rs6000/vsx.md (vsx_concat_<mode>): Adjust output for LE.
	(vsx_concat_v2sf): Likewise.

2013-10-16  James Greenhalgh  <james.greenhalgh@arm.com>

	* config/aarch64/aarch64.md
	(*mov<mode>_aarch64): Fix output template for DUP (element) Scalar.

2013-10-16  Andrew MacLeod  <amacleod@redhat.com>

	PR tree-optimization/58697
	* cfgloop.c (get_estimated_loop_iterations_int): Rename from
	estimated_loop_iterations_int.